--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -12,15 +12,13 @@ info:
     - **DELETE**: Finish an existing device registration via its unique `racmSessionId`
 
     To receive server-side updates about new voice-video sessions, use `webrtc-events` API.
-  contact:
-    email: contact@domain.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.2-rc.1
-  x-camara-commonalities: 0.4.0
+  version: 0.2.0-rc.1
+  x-camara-commonalities: 0.5
 servers:
-  - url: '{apiRoot}/webrtc-registration/v0.2'
+  - url: '{apiRoot}/webrtc-registration/v0.2rc1'
     description: APIs to manage Client Registration and Connection
     variables:
       apiRoot:
