fix(regsitration): PUT 200 no content replaced by 204 no content

--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -166,8 +166,8 @@ paths:
         - openId:
             - webrtc-registration:sessions:write
       responses:
-        '200':
-          description: No Content
+        '204':
+          description: Updated the registration status (no content)
     delete:
       tags:
         - Registration
