--- a/code/API_definitions/webrtc-events.yaml
+++ b/code/API_definitions/webrtc-events.yaml
@@ -10,7 +10,7 @@ info:
 
     Any device can subscribe for events its own active sessions using the
     `sessionId` to identify the session to track. And using a valid
-    `racmSessionId` it can subscribe to new sessions events. This allows them
+    `regSessionId` it can subscribe to new sessions events. This allows them
     to update the UI while WebRTC sessions are progressing and also, allows
     them to receive new session request, generating incoming call scenarios for
     non SIM devices.
@@ -44,11 +44,11 @@ info:
       devices using WebRTC sessions.
     - **session**: A media session, an exchange of media between endpoints.
       Typical example of session is a "single one-to-one call".
-    - **vvoipSessionId**: Unique identifier of a Voice and Video **session** using
+    - **mediaSessionId**: Unique identifier of a Voice and Video **session** using
       WebRTC technology. Retrieved using the `webrtc-call-handling` API
     - **registration**: An endpoint status were it is properly identified to be
       reachable by the server side of the WebRTC gateway.
-    - **racmSessionId**: Unique identifier of an WebRTC endpoint **registration**.
+    - **regSessionId**: Unique identifier of an WebRTC endpoint **registration**.
       Retrieved using the `webrtc-regsitration` API
 
     ## 3. API functionality
@@ -96,7 +96,7 @@ info:
     A `org.camaraproject.webrtc-events.v0.session-status` event includes
     session information updates. With the same schema that is used with the
     WebRTC Call Handling API, when retrieving information from the
-    `GET /webrtc-call-handling/session/{vvoipSessionId}` endpoint.
+    `GET /webrtc-call-handling/session/{mediaSessionId}` endpoint.
 
     In general lines, it is emitted each time that an event happens within the
     subscribed session. This might happen when SDP updates are included for any
@@ -199,13 +199,13 @@ paths:
         - `org.camaraproject.webrtc-events.v0.session-status`: updates on specific call
 
         To subscribe and receive notifications about new calls, a
-        `session-invitation` subscription is required using the `racmSessionId`
+        `session-invitation` subscription is required using the `regSessionId`
         obtained from webrtc-registration API.
 
         Once you create a new voice-video session or receive an
         new call event, you can subscribe to `session-status` to receive
         updates about the voice-video session in progress using the
-        `vvoipSessionId` unique identifier.
+        `mediaSessionId` unique identifier.
       operationId: createNotificationChannelSubscription
       parameters:
         - $ref: "#/components/parameters/x-correlator"
@@ -569,15 +569,15 @@ components:
       description: |-
         The detail of the requested event subscription.
         - org.camaraproject.webrtc-events.v0.session-invitation requires a
-          valid `racmSessionId` obtained via registration endpoint.
+          valid `regSessionId` obtained via registration endpoint.
         - org.camaraproject.webrtc-events.v0.session-status requires both, a
-          valid `racmSessionId` obtained via registration endpoint and a valid
+          valid `regSessionId` obtained via registration endpoint and a valid
           `sessionId` obtained via session-invitation event or via CallHandling
           API
       type: object
       required:
         - deviceId
-        - racmSessionId
+        - regSessionId
       properties:
         deviceId:
           type: string
@@ -591,7 +591,7 @@ components:
             The sessionID will identify a unique session between the WebRTC
             Gateway and the device client.
             It will be included on the events generated.
-        racmSessionId:
+        regSessionId:
           type: string
           example: xsmcaum3z4zw4l0cu4w115m0
           description: |-
@@ -771,13 +771,13 @@ components:
         registration and the endpoint is susbcribed to recive new incoming calls.
 
         This event includes all the context information: caller, callee and possible carrier data to
-        contextualize (call subject, branding info, etc). It MUST include a vvoipSessionId, to allow the
+        contextualize (call subject, branding info, etc). It MUST include a mediaSessionId, to allow the
         endpoint to subscribe to this new call session.
       allOf:
         - $ref: "#/components/schemas/CloudEvent"
         - type: object
           required:
-            - vvoipSessionId
+            - mediaSessionId
           properties:
             data:
               $ref: "#/components/schemas/VvoipSessionInformation"
@@ -796,7 +796,7 @@ components:
         - $ref: "#/components/schemas/CloudEvent"
         - type: object
           required:
-            - vvoipSessionId
+            - mediaSessionId
             - status
           properties:
             data:
@@ -857,9 +857,9 @@ components:
         clientCorrelator:
           type: string
           description: A correlator that the client can use to tag this particular resource representation during a request to create a resource on the server. Note - This allows the client to recover from communication failures during resource creation and therefore avoids re-sending the message in such situations. In case the element is present, the WebRTC GW shall not alter its value, and shall provide it as part of the representation of this resource.
-        vvoipSessionId:
+        mediaSessionId:
           type: string
-          description: The VVOIP session ID created by WebRTC Gateway. The vvoipSessionId shall not be included in POST requests by the client, but must be included in the notifications from the WebRTC GW to client.
+          description: The VVOIP session ID created by WebRTC Gateway. The mediaSessionId shall not be included in POST requests by the client, but must be included in the notifications from the WebRTC GW to client.
           example: '0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF'
         callObjectRef:
           type: string
@@ -1363,16 +1363,16 @@ components:
         config:
           subscriptionDetail:
             deviceId: "1qazxsw23edc"
-            racmSessionId: "xsmcaum3z4zw4l0cu4w115m0"
+            regSessionId: "xsmcaum3z4zw4l0cu4w115m0"
           initialEvent: true
           subscriptionMaxEvents: 50
           subscriptionExpireTime: "2024-11-17T13:18:23.682Z"
     SESSION_SUBSCRIPTION:
       description: |-
         A sample of WebRTC `session-status` subscription for a specific
-        `vvoipSessionId` at `acme.opentelco.com`.
+        `mediaSessionId` at `acme.opentelco.com`.
 
-        Identified by for `vvoipSessionId`, and validated via a `racmSessionId`
+        Identified by for `mediaSessionId`, and validated via a `regSessionId`
         the endpoint is able to interact with its own voice-video session.
         This could be used to remotely control the call or to handle the async
         session establishment. For instance, updating the user interface for
@@ -1385,8 +1385,8 @@ components:
         config:
           subscriptionDetail:
             deviceId: "1qazxsw23edc"
-            racmSessionId: "xsmcaum3z4zw4l0cu4w115m0"
-            vvoipSessionId: 0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF
+            regSessionId: "xsmcaum3z4zw4l0cu4w115m0"
+            mediaSessionId: 0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF
           initialEvent: true
           subscriptionMaxEvents: 50
           subscriptionExpireTime: "2024-11-17T13:18:23.682Z"
@@ -1398,7 +1398,7 @@ components:
         A new WebRTC session is requested (i.e. incoming call). This event
         starts a session negotiation. All other events related with this
         webrtc session will be shared via the `session-status` events, and
-        identified via the unique `vvoipSessionId`.
+        identified via the unique `mediaSessionId`.
 
         The main point to distinguish between a *new session* and an update over
         an *existing session* is the **type**. A `session-invitation` describes
@@ -1420,7 +1420,7 @@ components:
           offer:
             sdp: "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0"
           clientCorrelator: "79520148-0e79-4bd8-adbf-d04c463de6ba"
-          vvoipSessionId: "0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF"
+          mediaSessionId: "0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF"
           reason: "New subscriber incoming call"
           sequenceNumber: 1
     REGISTRATION_REVOKED:
@@ -1479,6 +1479,6 @@ components:
           answer:
             sdp: "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 47510 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:243a:a344:cee7:7b39:bb1e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:3108871805 1 udp 2122262783 2001:e0:410:243a:a344:cee7:7b39:bb1e 47510 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:47Nx\r\na=ice-pwd:ln3CttOSkObcQ7A0tYO1LXqy\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:ruAnBNYnTJqDVZAIJV59VpQ5DxGI6tMX9h9kkHSz\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\na=ptime:20\r\n"
           clientCorrelator: "79520148-0e79-4bd8-adbf-d04c463de6ba"
-          vvoipSessionId: "0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF"
+          mediaSessionId: "0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF"
           reason: "Answer SDP update"
           sequenceNumber: 3
