fix(*): Ensure error 400, 401, 403 responses are included

--- a/code/API_definitions/webrtc-call-handling.yaml
+++ b/code/API_definitions/webrtc-call-handling.yaml
@@ -236,6 +236,8 @@ paths:
                   $ref: '#/components/examples/exampleVoiceVideoSessionResponse'
         '400':
           $ref: '#/components/responses/Generic400'
+        '401':
+          $ref: "#/components/responses/Generic401"
         '403':
           $ref: '#/components/responses/Generic403'
   /sessions/{vvoipSessionId}:
